--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Muli:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap");
+
+* {
+	margin: 0;
+	padding: 0;
+}
 
 body {
 	margin: 0;
-	font-family: "Source Sans Pro", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	font-size: 62.5%;
 }
