--- a/src/App.scss
+++ b/src/App.scss
@@ -228,7 +228,7 @@ input[type="number"]::-webkit-inner-spin-button {
   font-size: 1.8rem;
   letter-spacing: 0.1rem;
   margin-bottom: 1.5rem;
-  color: #fff;
+  color: #000;
   padding: 0.4rem 0.4rem 0.4rem 0.7rem;
   border-radius: 0.3rem;
   width: 32rem;
