--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&family=Muli:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap");
 
+@media screen and (max-width: 1199px) {
+	html {
+		font-size: 55%;
+	}
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1440px) {
+	html {
+		font-size: 70%;
+	}
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -10,4 +22,5 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-size: 62.5%;
+	background-color: #77c987;
 }
