--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@
   }
 }
 @mixin landscape-orientation {
-  @media screen and (orientation: landscape) {
+  @media screen and (max-width: 991px) and (orientation: landscape) {
     @content;
   }
 }
